Co-authored-by: Xingqi Z <Bonjour134092@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 
 <head>
+  <title>Onze Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mijn Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-  Welkom op mijn website
+  <div id="wrapper">
+    <p>
+      Hallo wereld wereld de wereld is van mij <br>
+    bla bla bla bla bla iets in die richting
+    </p>
+  </div>
+
 </body>
 
 </html>
