--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-sex
+nee
 <body>
   <div id="wrapper">
     <p>
