--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 
 <body>
-  <div id="wrapper">
-    <p>
-      Hallo wereld wereld de wereld is van mij <br>
-    bla bla bla bla bla iets in die richting
-    </p>
-  </div>
+  <h1>Header 1</h1>
 
+  <p>Lorem ipsum this is a very Latin text :)</p>
 </body>
 
 </html>
