--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Header 1</h1>
 
-  <p>Lorem ipsum this is a very Latin text :)</p>
+  <p>Lorem ipsum eram cum ablative</p>
 </body>
 
 </html>
