--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  <h1>Header 1</h1>
+  <div id="wrapper">
+    <h1>Header 1</h1>
 
-  <p>Lorem ipsum eram cum ablative</p>
+    <p>Lorem ipsum eram cum ablative</p>
+  </div>
 </body>
 
 </html>
