--- a/beoordeling.html
+++ b/beoordeling.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-  <title>Onze Website</title>
+  <title>Website beoordelingen</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -11,7 +11,8 @@
 <body>
   <div id="wrapper">
     <nav>
-      <a href=""
+      <a href="index.html">INdex</a>
+      <a href="beoordeling.html">Beoordeling</a>
     </nav>
     <h1>Header 1</h1>
 
