--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="nl">
 
 <head>
-  <title>Onze Website</title>
+  <title>Security | Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-  <div id="wrapper">
+  <nav>
+    <div class="wrapper nav">
 
-    <h1>Header 1</h1>
+    </div>
+  </nav>
 
-    <p>Lorem ipsum eram cum ablative</p>
-  </div>
+  <header></header>
+
+  <main>
+    <div class="wrapper main">
+
+    </div>
+  </main>
 </body>
 
 </html>
