--- a/information.html
+++ b/information.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-  <title>Security | Home</title>
+  <title>Security | Inhoud</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css"/>
