--- a/information.html
+++ b/information.html
@@ -21,9 +21,14 @@
   <header></header>
 
   <main>
+    <div id="sidebar">
+        Hello
+    </div>
     <div class="wrapper main">
 Hello
+
     </div>
+
   </main>
 </body>
 
