--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
   <main>
     <div class="wrapper main">
-Hello
+      <h1>header 1</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget augue eget metus bibendum scelerisque. Praesent eu molestie enim. In quis leo suscipit, placerat eros vitae, accumsan odio. Cras ut maximus risus, eu ultrices enim. Donec vitae ullamcorper est, eleifend feugiat mauris. Quisque eget malesuada orci. Phasellus luctus venenatis eros in viverra.</p>
     </div>
   </main>
 </body>
