--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
 
   <main>
     <div class="wrapper main">
-      <h1>header 1</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget augue eget metus bibendum scelerisque. Praesent eu molestie enim. In quis leo suscipit, placerat eros vitae, accumsan odio. Cras ut maximus risus, eu ultrices enim. Donec vitae ullamcorper est, eleifend feugiat mauris. Quisque eget malesuada orci. Phasellus luctus venenatis eros in viverra.</p>
+      <article>
+        <h1>Header</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Mauris sodales orci nec odio aliquet consectetur. Duis arcu leo, 
+          facilisis id lectus ac, efficitur rutrum purus. Aliquam erat 
+          volutpat. Ut at urna nec tortor consectetur commodo. Etiam 
+          imperdiet felis ac convallis luctus. Curabitur elementum est
+           at ipsum porttitor, nec tincidunt eros.
+        </p>
+
+      </article>
     </div>
   </main>
 </body>
