--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
            at ipsum porttitor, nec tincidunt eros.
         </p>
 
+        <img src="/attachments/placeholder.png">
+
+        <h1>
+          Header
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Sed sed purus eu elit interdum pharetra nec id turpis. 
+          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
+           ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
+           Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
+           Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
+           posuere luctus mi, vel dictum neque. In efficitur ut orci et 
+           placerat. Suspendisse non purus et nibh iaculis accumsan. Mauris in porta.
+        </p>
       </article>
     </div>
   </main>
