--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <div class="wrapper nav">
-      <a href="index.html">Home</a>
+      <a href="index.html" class="nav current">Home</a>
       <a href="information.html">Inhoud</a>
       <a href="about-us.html">Over ons</a>
       <a href="simulation.html">Simulatie</a>
