--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
            Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
            Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
            posuere luctus mi, vel dictum neque. In efficitur ut orci et 
-           placerat. Suspendisse non purus et nibh iaculis accumsan. Mauris in porta.
+           placerat. Suspendisse non purus et nibh iaculis accumsan. 
+           Mauris in porta.
         </p>
       </article>
     </div>
