--- a/information.html
+++ b/information.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="wrapper nav">
       <a href="index.html">Home</a>
-      <a href="information.html">Inhoud</a>
+      <a href="information.html" id="current">Inhoud</a>
       <a href="about-us.html">Over ons</a>
       <a href="simulation.html">Simulatie</a>
     </div>
