--- a/information.html
+++ b/information.html
@@ -25,8 +25,60 @@
         Hello
     </div>
     <div class="wrapper main">
-Hello
+      <article>
+        <h1>Security</h1>
 
+        <h2>1. Digitale veiligheid</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Mauris sodales orci nec odio aliquet consectetur. Duis arcu leo, 
+          facilisis id lectus ac, efficitur rutrum purus. Aliquam erat 
+          volutpat. Ut at urna nec tortor consectetur commodo. Etiam 
+          imperdiet felis ac convallis luctus. Curabitur elementum est
+          at ipsum porttitor, nec tincidunt eros.
+        </p>
+
+        <img src="/attachments/placeholder.png">
+
+        <h2>2. Bedreiging</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Sed sed purus eu elit interdum pharetra nec id turpis. 
+          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
+          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
+          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
+          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
+          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
+          placerat. Suspendisse non purus et nibh iaculis accumsan. 
+          Mauris in porta.
+        </p>
+
+        <h2>3. Aanvallers en verdedigers</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Sed sed purus eu elit interdum pharetra nec id turpis. 
+          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
+          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
+          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
+          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
+          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
+          placerat. Suspendisse non purus et nibh iaculis accumsan. 
+          Mauris in porta.
+        </p>
+
+        <h2>4. Maatregelen</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Sed sed purus eu elit interdum pharetra nec id turpis. 
+          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
+          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
+          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
+          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
+          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
+          placerat. Suspendisse non purus et nibh iaculis accumsan. 
+          Mauris in porta.
+        </p>
+      </article>
     </div>
 
   </main>
