--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <article>
         <h1>Header</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Lorem ipsum dolor sit amet, 
+          <a href="index.html">consectetur</a> adipiscing elit. 
           Mauris sodales orci nec odio aliquet consectetur. Duis arcu leo, 
           facilisis id lectus ac, efficitur rutrum purus. Aliquam erat 
           volutpat. Ut at urna nec tortor consectetur commodo. Etiam 
