--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper nav">
       <a href="index.html" id="current">Home</a>
       <a href="information.html">Inhoud</a>
+      <a href="dictionary.html">Begrippen</a>
       <a href="about-us.html">Over ons</a>
       <a href="simulation.html">Simulatie</a>
     </div>
