--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,7 @@
         <div class="wrapper nav">
           <a href="index.html">Home</a>
           <a href="information.html">Inhoud</a>
+          <a href="dictionary.html">Begrippen</a>
           <a href="about-us.html" id="current">Over ons</a>
           <a href="simulation.html">Simulatie</a>
         </div>
