goals per paragraph and article placement

--- a/about-us.html
+++ b/about-us.html
@@ -18,6 +18,12 @@
           <a href="simulation.html">Simulatie</a>
         </div>
     </nav>
+
+    <header></header>
+
+    <main>
+      
+    </main>
 </body>
 
 </html>
