--- a/information.html
+++ b/information.html
@@ -29,57 +29,63 @@
       <article>
         <h1>Security</h1>
 
-        <h2>1. Digitale veiligheid</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Mauris sodales orci nec odio aliquet consectetur. Duis arcu leo, 
-          facilisis id lectus ac, efficitur rutrum purus. Aliquam erat 
-          volutpat. Ut at urna nec tortor consectetur commodo. Etiam 
-          imperdiet felis ac convallis luctus. Curabitur elementum est
-          at ipsum porttitor, nec tincidunt eros.
-        </p>
+        <article>
+          <h2>1. Digitale veiligheid</h2>
 
-        <img src="/attachments/placeholder.png">
+          <div class="goals">
+            <h2 class="goals">Leerdoelen</h2>
+            <p>Dit ga je leren in het onderdeel digitale veiligheid:</p>
 
-        <h2>2. Bedreiging</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed sed purus eu elit interdum pharetra nec id turpis. 
-          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
-          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
-          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
-          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
-          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
-          placerat. Suspendisse non purus et nibh iaculis accumsan. 
-          Mauris in porta.
-        </p>
+            <ol>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+            </ol>
+         </div>
 
-        <h2>3. Aanvallers en verdedigers</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed sed purus eu elit interdum pharetra nec id turpis. 
-          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
-          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
-          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
-          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
-          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
-          placerat. Suspendisse non purus et nibh iaculis accumsan. 
-          Mauris in porta.
-        </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
 
-        <h2>4. Maatregelen</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed sed purus eu elit interdum pharetra nec id turpis. 
-          Suspendisse vitae dolor sit amet eros scelerisque facilisis id
-          ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
-          Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
-          Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
-          posuere luctus mi, vel dictum neque. In efficitur ut orci et 
-          placerat. Suspendisse non purus et nibh iaculis accumsan. 
-          Mauris in porta.
-        </p>
-      </article>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </article>
+
+        <article>
+          <h2>2. Bedreiging</h2>
+          <p>
+
+          </p>
+        </article>
+
+        <article>
+          <h2>3. Aanvallers en verdedigers</h2>
+          <p>
+
+          </p>
+        </article>
+
+        <article>
+          <h2>4. Maatregelen</h2>
+          <p>
+
+          </p>
+        </article>
+
     </div>
 
   </main>
