name change and definition list

--- a/information.html
+++ b/information.html
@@ -34,7 +34,7 @@
 
           <div class="goals">
             <h2 class="goals">Leerdoelen</h2>
-            <p>Dit ga je leren in het onderdeel digitale veiligheid:</p>
+            <p>Dit ga je leren in het onderdeel <i>digitale veiligheid</i>:</p>
 
             <ol>
               <li>A</li>
@@ -67,6 +67,19 @@
 
         <article>
           <h2>2. Bedreiging</h2>
+
+          <div class="goals">
+            <h2 class="goals">Leerdoelen</h2>
+            <p>Dit ga je leren in het onderdeel <i>bedreiging</i>:</p>
+
+            <ol>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+            </ol>
+         </div>
+
           <p>
 
           </p>
@@ -74,6 +87,19 @@
 
         <article>
           <h2>3. Aanvallers en verdedigers</h2>
+
+          <div class="goals">
+            <h2 class="goals">Leerdoelen</h2>
+            <p>Dit ga je leren in het onderdeel <i>aanvallers en verdedigers</i>:</p>
+
+            <ol>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+            </ol>
+         </div>
+
           <p>
 
           </p>
@@ -81,6 +107,19 @@
 
         <article>
           <h2>4. Maatregelen</h2>
+
+          <div class="goals">
+            <h2 class="goals">Leerdoelen</h2>
+            <p>Dit ga je leren in het onderdeel <i>maatregelen</i>:</p>
+
+            <ol>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+              <li>A</li>
+            </ol>
+         </div>
+
           <p>
 
           </p>
