end of lesson bing bong

--- a/definitions.html
+++ b/definitions.html
@@ -23,17 +23,19 @@
 
   <main>
     <div class="wrapper main">
-        <article>
-            <h1>Security</h1>
-    
-            <article>
-                <h2>1. Digitale veiligheid</h2>
+      <h1>Begrippen</h1>
 
-                <dl>
-                    <dt>Vertrouwelijkheid</dt>
-                    <dd>De afscherming van gegevens tegen ongeoorloofde inzage.</dd>
-                </dl>
-            </article>
+      <article>
+        <h2>1. Digitale veiligheid</h2>
+
+        <dl>
+          <dt>Vertrouwelijkheid</dt>
+          <dd>De afscherming van gegevens tegen ongeoorloofde inzage.</dd>
+
+          <dt>Authenticatie</dt>
+          <dd>Controle of de gebruiker toegang mag hebben tot persoonlijke gegevens.</dd>
+        </dl>
+      </article>
     </div>
   </main>
 </body>
