--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Home :: Security</title>
+    <title>Template :: Security</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="z.css"/>
