yeehaw :skull: :banana:

--- a/about-us.html
+++ b/about-us.html
@@ -24,6 +24,13 @@
     <main>
 
     </main>
+
+    <footer>
+      <div class="wrapper">
+          <h3>SCW opdracht informatica</h3>
+          <span>laatst bewerkt: 8 November 2023</span>
+      </div>
+  </footer>
 </body>
 
 </html>
