--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Home :: Security</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="z.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-  <nav>
-    <div class="wrapper">
-      <a href="index.html" id="current">Home</a>
-      <a href="information.html">Inhoud</a>
-      <a href="definitions.html">Begrippen</a>
-      <a href="about-us.html">Over ons</a>
-      <a href="simulation.html">Simulatie</a>
-    </div>
+    <nav>
+        <div class="wrapper">
+            <a href="index.html" id="current">Home</a>
+            <a href="information.html">Inhoud</a>
+            <a href="definitions.html">Begrippen</a>
+            <a href="about-us.html">Over ons</a>
+            <a href="simulation.html">Simulatie</a>
+        </div>
     </nav>
 
     <header></header>
@@ -55,6 +55,13 @@
             </article>
         </div>
     </main>
+
+    <footer>
+        <div class="wrapper">
+            <h3>SCW opdracht informatica</h3>
+            <span>laatst bewerkt: 19 december 2023</span>
+        </div>
+    </footer>
 </body>
 
 </html>
