me when the tab sizes are inconsistent :skull:

--- a/about-us.html
+++ b/about-us.html
@@ -2,35 +2,33 @@
 <html lang="nl">
 
 <head>
-  <title>Security | About us</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Over ons :: Security</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
     <nav>
-        <div class="wrapper nav">
-          <a href="index.html">Home</a>
-          <a href="information.html">Inhoud</a>
-          <a href="definitions.html">Begrippen</a>
-          <a href="about-us.html" id="current">Over ons</a>
-          <a href="simulation.html">Simulatie</a>
+        <div class="wrapper">
+            <a href="index.html">Home</a>
+            <a href="information.html">Inhoud</a>
+            <a href="definitions.html">Begrippen</a>
+            <a href="about-us.html" id="current">Over ons</a>
+            <a href="simulation.html">Simulatie</a>
         </div>
     </nav>
 
     <header></header>
 
-    <main>
-
-    </main>
+    <main></main>
 
     <footer>
-      <div class="wrapper">
-          <h3>SCW opdracht informatica</h3>
-          <span>laatst bewerkt: 8 November 2023</span>
-      </div>
-  </footer>
+        <div class="wrapper">
+            <h3>SCW opdracht informatica</h3>
+            <span>laatst bewerkt: 19 december 2023</span>
+        </div>
+    </footer>
 </body>
 
 </html>
