--- a/definitions.html
+++ b/definitions.html
@@ -2,42 +2,42 @@
 <html lang="nl">
 
 <head>
-  <title>Security | Home</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Begrippen :: Security</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-  <nav>
-    <div class="wrapper nav">
-      <a href="index.html">Home</a>
-      <a href="information.html">Inhoud</a>
-      <a href="definitions.html" id="current">Begrippen</a>
-      <a href="about-us.html">Over ons</a>
-      <a href="simulation.html">Simulatie</a>
-    </div>
-  </nav>
+    <nav>
+        <div class="wrapper nav">
+            <a href="index.html">Home</a>
+            <a href="information.html">Inhoud</a>
+            <a href="definitions.html" id="current">Begrippen</a>
+            <a href="about-us.html">Over ons</a>
+            <a href="simulation.html">Simulatie</a>
+        </div>
+    </nav>
 
-  <header></header>
+    <header></header>
 
-  <main>
-    <div class="wrapper main">
-      <h1>Begrippen</h1>
+    <main>
+        <div class="wrapper">
+            <h1>Begrippen</h1>
 
-      <article>
-        <h2>1. Digitale veiligheid</h2>
+            <article>
+                <h2>1. Digitale veiligheid</h2>
 
-        <dl>
-          <dt>Vertrouwelijkheid</dt>
-          <dd>De afscherming van gegevens tegen ongeoorloofde inzage.</dd>
+                <dl>
+                    <dt>Vertrouwelijkheid</dt>
+                    <dd>De afscherming van gegevens tegen ongeoorloofde inzage.</dd>
 
-          <dt>Authenticatie</dt>
-          <dd>Controle of de gebruiker toegang mag hebben tot persoonlijke gegevens.</dd>
-        </dl>
-      </article>
-    </div>
-  </main>
+                    <dt>Authenticatie</dt>
+                    <dd>Controle of de gebruiker toegang mag hebben tot persoonlijke gegevens.</dd>
+                </dl>
+            </article>
+        </div>
+    </main>
 </body>
 
 </html>
