--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Template :: Security</title>
+    <title>Home :: Security</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -55,6 +55,13 @@
             </article>
         </div>
     </main>
+
+    <footer>
+        <div class="wrapper">
+            <h3>SCW opdracht informatica</h3>
+            <span>laatst bewerkt: 19 december 2023</span>
+        </div>
+    </footer>
 </body>
 
 </html>
