what about nice colours? :smile:

--- a/information.html
+++ b/information.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Security | Inhoud</title>
+    <title>Inhoud :: Security</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
      <link rel="stylesheet" type="text/css" href="style.css"/>
