--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,40 @@
 
     <header></header>
 
-    <main></main>
+    <main>
+        <div class="wrapper">
+            <article>
+                <h1>Header</h1>
+                
+                <p>
+                    Lorem ipsum dolor sit amet, 
+                    <a href="index.html">consectetur</a> adipiscing elit. 
+                    Mauris sodales orci nec odio aliquet consectetur. Duis arcu leo, 
+                    facilisis id lectus ac, efficitur rutrum purus. Aliquam erat 
+                    volutpat. Ut at urna nec tortor consectetur commodo. Etiam 
+                    imperdiet felis ac convallis luctus. Curabitur elementum est
+                    at ipsum porttitor, nec tincidunt eros.
+                </p>
+
+                <img src="/attachments/placeholder.png">
+            </article>
+            <article>
+                <h1>Header</h1>
+                
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Sed sed purus eu elit interdum pharetra nec id turpis. 
+                    Suspendisse vitae dolor sit amet eros scelerisque facilisis id
+                    ac est. Nam hendrerit lectus eget lorem sollicitudin aliquet. 
+                    Etiam dapibus feugiat elit, rhoncus posuere leo dictum auctor. 
+                    Quisque vitae arcu vitae tellus sollicitudin dictum. Aenean 
+                    posuere luctus mi, vel dictum neque. In efficitur ut orci et 
+                    placerat. Suspendisse non purus et nibh iaculis accumsan. 
+                    Mauris in porta.
+                </p>
+            </article>
+        </div>
+    </main>
 
     <footer>
         <div class="wrapper">
