fixed font-size inheritance issues

--- a/information.html
+++ b/information.html
@@ -37,10 +37,12 @@
                     <p>Dit ga je leren in het onderdeel <i>digitale veiligheid</i>:</p>
     
                     <ol>
-                        <li>A</li>
-                        <li>A</li>
-                        <li>A</li>
-                        <li>A</li>
+                        <li>Je kent de drie beveiligingsaspecten vertrouwelijkheid, integriteit en beschikbaarheid.</li>
+                        <li>Je kunt verschillende vormen van authenticatie noemen.</li>
+                        <li>Je weet wat two factor authentication betekent.</li>
+                        <li>Je weet het verschil tussen authenticatie, identificatie en verificatie.</li>
+                        <li>Je bent bekend met encryptie en weet het verschil tussen encryptie en hashing.</li>
+                        <li>Je weet wat een DDoS-aanval is.</li>
                     </ol>
                 </div>
 
