fixed responsive design, and working links to seperate paragraphs

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     placerat. Suspendisse non purus et nibh iaculis accumsan. 
                     Mauris in porta.
                 </p>
+                <!-- temporary, please dont keep me T.T -->
+                <a href="information.html#aanvallers-en-verdedigers">Paragraaf 3: Aanvallers en verdedigers</a><br> 
+                <a href="information.html#maatregelen">Paragraaf 4: Maatregelen</a>
             </article>
         </div>
     </main>
