improved minor issues with responsiveness on mobile

--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Over ons :: Security</title>
+    <title>Over ons | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -11,11 +11,12 @@
 <body>
     <nav>
         <div class="wrapper">
-            <a href="index.html">Home</a>
-            <a href="information.html">Inhoud</a>
-            <a href="definitions.html">Begrippen</a>
-            <a href="about-us.html" id="current">Over ons</a>
-            <a href="simulation.html">Simulatie</a>
+            <a href="index.html" data-collapsible="false">Home</a>
+            <a href="information.html" data-collapsible="true">Inhoud</a>
+            <a href="definitions.html" data-collapsible="true">Begrippen</a>
+            <a href="about-us.html" data-collapsible="true" id="current">Over ons</a>
+            <a href="simulation.html" data-collapsible="true">Simulatie</a>
+            <button data-collapsible="false">Menu</button>
         </div>
     </nav>
 
