--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Home :: Security</title>
+    <title>Home | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -11,11 +11,12 @@
 <body>
     <nav>
         <div class="wrapper">
-            <a href="index.html" id="current">Home</a>
-            <a href="information.html">Inhoud</a>
-            <a href="definitions.html">Begrippen</a>
-            <a href="about-us.html">Over ons</a>
-            <a href="simulation.html">Simulatie</a>
+            <a href="index.html" data-collapsible="false" id="current">Home</a>
+            <a href="information.html" data-collapsible="true">Inhoud</a>
+            <a href="definitions.html" data-collapsible="true">Begrippen</a>
+            <a href="about-us.html" data-collapsible="true">Over ons</a>
+            <a href="simulation.html" data-collapsible="true">Simulatie</a>
+            <button data-collapsible="false">Menu</button>
         </div>
     </nav>
 
@@ -24,7 +25,7 @@
     <main>
         <div class="wrapper">
             <article>
-                <h1>Header</h1>
+                <h1>Welkom!</h1>
                 
                 <p>
                     Lorem ipsum dolor sit amet, 
@@ -53,8 +54,13 @@
                     Mauris in porta.
                 </p>
                 <!-- temporary, please dont keep me T.T -->
-                <a href="information.html#aanvallers-en-verdedigers">Paragraaf 3: Aanvallers en verdedigers</a><br> 
-                <a href="information.html#maatregelen">Paragraaf 4: Maatregelen</a>
+                <a href="information.html#aanvallers-en-verdedigers">Paragraaf 3: Aanvallers en verdedigers</a><br>
+                <a href="information.html#maatregelen">Paragraaf 4: Maatregelen</a><br>
+                <a href="index.html">Home</a><br>
+                <a href="information.html">Inhoud</a><br>
+                <a href="definitions.html">Begrippen</a><br>
+                <a href="about-us.html">Over ons</a><br>
+                <a href="simulation.html">Simulatie</a>
             </article>
         </div>
     </main>
