--- a/simulation.html
+++ b/simulation.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-  <title>Security | Simulation</title>
+  <title>Simulatie | Security informatica</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css"/>
