--- a/information.html
+++ b/information.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Inhoud :: Security</title>
+    <title>Inhoud | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
      <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -10,12 +10,13 @@
 
 <body>
     <nav>
-        <div class="wrapper nav">
-            <a href="index.html">Home</a>
-             <a href="information.html" id="current">Inhoud</a>
-            <a href="definitions.html">Begrippen</a>
-            <a href="about-us.html">Over ons</a>
-            <a href="simulation.html">Simulatie</a>
+        <div class="wrapper">
+            <a href="index.html" data-collapsible="false">Home</a>
+            <a href="information.html" data-collapsible="true" id="current">Inhoud</a>
+            <a href="definitions.html" data-collapsible="true">Begrippen</a>
+            <a href="about-us.html" data-collapsible="true">Over ons</a>
+            <a href="simulation.html" data-collapsible="true">Simulatie</a>
+            <button data-collapsible="false">Menu</button>
         </div>
     </nav>
 
