--- a/definitions.html
+++ b/definitions.html
@@ -39,6 +39,13 @@
             </article>
         </div>
     </main>
+
+    <footer>
+        <div class="wrapper">
+            <h3>SCW opdracht informatica</h3>
+            <span>laatst bewerkt: 23 december 2023</span>
+        </div>
+    </footer>
 </body>
 
 </html>
