--- a/information.html
+++ b/information.html
@@ -139,6 +139,13 @@
             </article>
         </div>
     </main>
+
+    <footer>
+        <div class="wrapper">
+            <h3>SCW opdracht informatica</h3>
+            <span>laatst bewerkt: 23 december 2023</span>
+        </div>
+    </footer>
 </body>
   
 </html>
