--- a/definitions.html
+++ b/definitions.html
@@ -13,8 +13,8 @@
         <div class="wrapper">
             <a href="index.html" data-collapsible="false">Home</a>
             <a href="information.html" data-collapsible="true">Inhoud</a>
-            <a href="definitions.html" data-collapsible="true">Begrippen</a>
-            <a href="about-us.html" data-collapsible="true" id="current">Over ons</a>
+            <a href="definitions.html" data-collapsible="true" id="current">Begrippen</a>
+            <a href="about-us.html" data-collapsible="true">Over ons</a>
             <a href="simulation.html" data-collapsible="true">Simulatie</a>
             <button data-collapsible="false">Menu</button>
         </div>
