--- a/simulation.html
+++ b/simulation.html
@@ -5,7 +5,7 @@
   <title>Simulatie | Security informatica</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="simulation.css"/>
 </head>
 
 <body>
