--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     at ipsum porttitor, nec tincidunt eros.
                 </p>
 
-                <img src="/attachments/placeholder.png">
+                <img src="/attachments/placeh.png">
             </article>
             <article>
                 <h1>Header</h1>
