--- a/content.html
+++ b/content.html
@@ -10,15 +10,17 @@
 
 <body>
     <nav>
+        <div class="left">
+            <a href="index.html"><span>Security</span></a>
+        </div>
         <div class="wrapper">
             <div>
-                <a href="index.html">Home</a>
-                <a href="content.html">Inhoud</a>
-                <a href="glossary.html">Begrippen</a>
+                <a href="content.html"><span>Inhoud</span></a>
+                <a href="glossary.html"><span>Begrippen</span></a>
             </div>
             <div>
-                <a href="about-us.html">Over ons</a>
-                <a href="simulation.html">Simulatie</a>
+                <a href="about-us.html"><span>Over ons</span></a>
+                <a href="simulation.html"><span>Simulatie</span></a>
             </div>
         </div>
     </nav>
