nav bar and new html files

--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Inhoud | Security informatica</title>
+    <title>Over ons | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -16,11 +16,11 @@
             </div>
             <div class="center">
                 <div>
-                    <a href="content.html" id="current">Inhoud</a>
+                    <a href="content.html">Inhoud</a>
                     <a href="glossary.html">Begrippen</a>                    
                 </div>
                 <div>
-                    <a href="about-us.html">Over ons</a>
+                    <a href="about-us.html" id="current">Over ons</a>
                     <a href="simulation.html">Simulatie</a>
                 </div>
             </div>
