--- a/glossary.html
+++ b/glossary.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Inhoud | Security informatica</title>
+    <title>Begrippen | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -16,8 +16,8 @@
             </div>
             <div class="center">
                 <div>
-                    <a href="content.html" id="current">Inhoud</a>
-                    <a href="glossary.html">Begrippen</a>                    
+                    <a href="content.html">Inhoud</a>
+                    <a href="glossary.html" id="current">Begrippen</a>                    
                 </div>
                 <div>
                     <a href="about-us.html">Over ons</a>
