--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div>
-                <a href="index.html">Home</a>
-                <a href="content.html">Inhoud</a>
+            <div class="left">
+                <a href="index.html">Security</a>
             </div>
-            <div>
-                <a href="about-us.html">Over ons</a>
-                <a href="simulation.html">Simulatie</a>
+            <div class="center">
+                <div>
+                    <a href="content.html">Inhoud</a>
+                    <a href="glossary.html">Begrippen</a>                    
+                </div>
+                <div>
+                    <a href="about-us.html">Over ons</a>
+                    <a href="simulation.html">Simulatie</a>
+                </div>
             </div>
         </div>
     </nav>
