fixed problem with the left div of the nav bar not actually being 22rem

--- a/content.html
+++ b/content.html
@@ -27,15 +27,23 @@
         </div>
     </nav>
 
-    <header></header>
-
     <main>
+        <div class="wrapper">
+            <aside class="left">
 
+            </aside>
+            <div class="center">
+                <header>
+                    
+                </header>
+            </div>
+            <aside class="right">
+                <footer>
+
+                </footer>
+            </aside>
+        </div>
     </main>
-
-    <footer>
-
-    </footer>
 
 </body>
 
