plain tooltip and glossary

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="wrapper">
             <div class="left">
-                <a href="index.html">Security</a>
+                <a href="index.html" title="Home">Security</a>
             </div>
             <div class="center">
                 <div>
