--- a/glossary.html
+++ b/glossary.html
@@ -38,7 +38,7 @@
             <main class="center">
                 <article id="header">
                     <header>
-                        <h1>Home</h1>
+                        <h1>Begrippen</h1>
                     </header>
                 </article>
 
