--- a/content.html
+++ b/content.html
@@ -33,7 +33,8 @@
 
         <div class="wrapper">
             <aside class="left">
-                
+                <p>Inhoudsopgave</p>
+
             </aside>
 
             <main class="center">
@@ -153,7 +154,14 @@
             </main>
             
             <aside class="right">
+                <p>Op deze pagina</p>
 
+                <ul>
+                    <li><a href="#digitale-veiligheid">Digitale veiligheid</a></li>
+                    <li><a href="#bedreiging">Bedreiging</a></li>
+                    <li><a href="#aanvallers-en-verdedigers">Aanvallers en verdedigers</a></li>
+                    <li><a href="#maatregelen">Maatregelen</a></li>
+                </ul>
             </aside>
         </div>
     </div>
