removed right navbar

--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@
                     </p>
                 </article>
 
-                <article id="achtergrond">
+                <article id="ontwikkeling">
                     <h2>Ontwerp van de website</h2>
     
                     <p>
@@ -90,7 +90,13 @@
             </main>
             
             <aside class="right">
+                <p>Op deze pagina</p>
 
+                <ul>
+                    <li><a href="#achtergrond">Achtergrond</a></li>
+                    <li><a href="#ontwikkeling">Ontwikkeling</a></li>
+                    <li><a href="#functies">Functies</a></li>
+                </ul>
             </aside>
         </div>
     </div>
