--- a/information.html
+++ b/information.html
@@ -48,26 +48,38 @@
                 </div>
 
                 <p>
-                    Iedereen gebruikt digitale technologieën op zijn eigen manier. Daarbij worden 
-                    veel persoonlijke gegevens (eigenschappen) vastgelegd. In feite heeft iedereen 
-                    zijn eigen digitale identiteit. Digitale beveiliging (Engels: <i>digital security</i>) 
-                    is een overkoepelende term voor alle manieren waarop je eigen digitale identiteit en 
-                    digitale gegevens beschermd kan worden. 
+                    Iedereen gebruikt digitale technologieën op zijn eigen manier. Daarbij worden veel persoonlijke gegevens 
+                    (eigenschappen) vastgelegd. In feite heeft iedereen zijn eigen digitale identiteit. Het is belangrijk 
+                    om deze gegevens veilig te houden, zodat anderen niet bijvoorbeeld je bankgegevens kunnen stelen en 
+                    misbruiken. Digitale beveiliging (Engels: <i>digital security</i>) is een overkoepelende term voor alle 
+                    manieren waarop je eigen digitale identiteit en digitale gegevens beschermd kan worden en gaat vooral 
+                    over de volgende aspecten.
                 </p>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <a href="definitions.html">Vertrouwelijkheid</a><br>
+                    Om toegang te krijgen tot persoonlijke gegevens, is er ten eerste een controle nodig om te kijken of jij 
+                    wel toegang hebt tot de gegevens (authenticatie). Dit kan door middel van: 
+
+                    <ul>
+                        <li>Iets wat je weet: zoals een wachtwoord, wachtzin of pincode.</li>
+                        <li>Iets wat je hebt: zoals een pasje, token of los apparaat.</li>
+                        <li>Iets wat je bent: biometrische kenmerken zoals een vingerafdruk, irisscan of aderpatroon.</li>
+                    </ul>
+                    Je kan je persoonlijke gegevens veiliger stellen, door middel van twee factor authenticatie (<i>2FA</i>). 
+                    Dan gebruik je twee middelen van authenticeren, bijvoorbeeld een wachtwoord én je vingerafdruk.
+                </p>
+                <p>
+                    Behalve authenticatie is er ook nog sprake van identificatie. De service wil weten wie je bent. Dit kan 
+                    door het invullen van je gebruikersnaam en wachtwoord of door het gebruiken van je biometrische kenmerken.
+                    Tenslotte wordt er ook nog geverifieerd om te kijken of je wel bent wie je zegt dat je bent. Dit is alleen 
+                    mogelijk als er al gegevens van jou bekend zijn. 
+                </p>
+                <p>
+                    Een techniek die verwant is aan authenticatie, identificatie en verificatie is screening. Hierbij worden 
+                    personen of objecten geïdentificeerd, met de bedoeling om informatie te krijgen over dit persoon. 
                 </p>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
             </article>
 
             <article id="bedreiging">
@@ -136,6 +148,15 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+            </article>
+
+            <article id="sources">
+                <h2>Bronnen</h2>
+
+                <ul>
+                    <li><a href="https://fundament-online.nl/leeromgeving/content.php?paragraaf_id=115139">Security (E2) 1.2</a></li>
+                    <li><a href="https://www.ncsc.nl/onderwerpen/authenticatie">NCSC Authenticatie</a></li>
+                </ul>
             </article>
         </div>
     </main>
