--- a/simulation.html
+++ b/simulation.html
@@ -9,7 +9,7 @@
 
 <body>
     <main id="wrapper">
-        <div id="phase-1 container">
+        <div id="phase-1" class="container">
 
         </div>
 
