--- a/simulation.html
+++ b/simulation.html
@@ -13,7 +13,7 @@
 
         </div>
 
-        <div id="phase-2 container">
+        <div id="phase-2" class="container">
             <div class="warning container">
 
             </div>
