--- a/content.html
+++ b/content.html
@@ -89,23 +89,30 @@
                     </h4>
 
                     <p>
+                        <a href="definitions.html">Vertrouwelijkheid</a>
+
                         Om toegang te krijgen tot persoonlijke gegevens, is er ten eerste een controle nodig om te kijken of jij 
-                        wel toegang hebt tot de gegevens (authenticatie). Dit kan door middel van: 
-    
-                        <ul>
-                            <li>Iets wat je weet: zoals een wachtwoord, wachtzin of pincode.</li>
-                            <li>Iets wat je hebt: zoals een pasje, token of los apparaat.</li>
-                            <li>Iets wat je bent: biometrische kenmerken zoals een vingerafdruk, irisscan of aderpatroon.</li>
-                        </ul>
+                        wel toegang hebt tot de gegevens (authenticatie). Dit kan door middel van:
+                    </p>
+
+                    <ul>
+                        <li>Iets wat je weet: zoals een wachtwoord, wachtzin of pincode.</li>
+                        <li>Iets wat je hebt: zoals een pasje, token of los apparaat.</li>
+                        <li>Iets wat je bent: biometrische kenmerken zoals een vingerafdruk, irisscan of aderpatroon.</li>
+                    </ul>
+
+                    <p>
                         Je kan je persoonlijke gegevens veiliger stellen, door middel van twee factor authenticatie (<i>2FA</i>). 
                         Dan gebruik je twee middelen van authenticeren, bijvoorbeeld een wachtwoord én je vingerafdruk.
                     </p>
+
                     <p>
                         Behalve authenticatie is er ook nog sprake van identificatie. De service wil weten wie je bent. Dit kan 
                         door het invullen van je gebruikersnaam en wachtwoord of door het gebruiken van je biometrische kenmerken.
                         Tenslotte wordt er ook nog geverifieerd om te kijken of je wel bent wie je zegt dat je bent. Dit is alleen 
                         mogelijk als er al gegevens van jou bekend zijn. 
                     </p>
+
                     <p>
                         Een techniek die verwant is aan authenticatie, identificatie en verificatie is screening. Hierbij worden 
                         personen of objecten geïdentificeerd, met de bedoeling om informatie te krijgen over dit persoon. 
