sidebar list fix

--- a/content.html
+++ b/content.html
@@ -85,7 +85,7 @@
                     </p>
                     
                     <h4>
-                        <a href="glossary.html">Vertrouwelijkheid</a>
+                        <a href="glossary.html#maatregelen">Vertrouwelijkheid</a>
                     </h4>
 
                     <p>
