--- a/glossary.html
+++ b/glossary.html
@@ -32,7 +32,14 @@
 
         <div class="wrapper">
             <aside class="left">
-                
+                <p>Op deze pagina</p>
+
+                <ul>
+                    <li><a href="#digitale-veiligheid">Digitale veiligheid</a></li>
+                    <li><a href="#bedreiging">Bedreiging</a></li>
+                    <li><a href="#aanvallers-en-verdedigers">Aanvallers en verdedigers</a></li>
+                    <li><a href="#maatregelen">Maatregelen</a></li>
+                </ul>
             </aside>
 
             <main class="center">
@@ -54,6 +61,18 @@
                             <dd>Controle of de gebruiker toegang mag hebben tot persoonlijke gegevens.</dd>
                         </dl>
                     </div>
+                </article>
+
+                <article id="bedreiging">
+                    <p>lorum</p>
+                </article>
+
+                <article id="aanvallers-en-verdedigers">
+                    <p>ipsum</p>
+                </article>
+
+                <article id="maatregelen">
+                    <p>dolor sit amet</p>
                 </article>
             </main>
         </div>
