--- a/glossary.html
+++ b/glossary.html
@@ -59,6 +59,55 @@
         
                             <dt>Authenticatie</dt>
                             <dd>Controle of de gebruiker toegang mag hebben tot persoonlijke gegevens.</dd>
+
+                            <dt>Drie vormen van authenticatie</dt>
+                            <dd>Iets dat je weet, iets dat je hebt, of iets dat je bent</dd>
+
+                            <dt>Identificatie</dt>
+                            <dd>Vaststellen wie iemand is.</dd>
+
+                            <dt>Verificatie</dt>
+                            <dd>Vaststellen dat een identificatie juist is.</dd>
+
+                            <dt>Two factor authentication</dt>
+                            <dd>Authenticatie die plaatsvindt door twee vormen van authenticatie te combineren.</dd>
+
+                            <dt>Screening</dt>
+                            <dd>Het identificeren van personen of voertuigen, bijvoorbeeld met camera's. Het doel 
+                                is om actie te ondernemen als de persoon of het voertuig op een lijst staat.</dd>
+
+                            <dt>Integriteit</dt>
+                            <dd>De bescherming van gegevens tegen verlies of (on)bedoelde wijzigingen.</dd>
+
+                            <dt>Rechten</dt>
+                            <dd>De dingen die een bepaalde gebruiker mag doen in een ICT-systeem.</dd>
+
+                            <dt>Rol</dt>
+                            <dd>De rol van een bepaalde gebruiker, die bepaalt welke rechten hij of zij heeft.</dd>
+
+                            <dt>Autorisatie</dt>
+                            <dd>Controleren welke rechten een vertrouwde gebruiker allemaal heeft.</dd>
+
+                            <dt>Checksum</dt>
+                            <dd>Digitale vingerafdruk van een bestand.</dd>
+
+                            <dt>Beschikbaarheid</dt>
+                            <dd>De mate van storingsvrije toegang tot gegevens.</dd>
+
+                            <dt>3-2-1-systeem voor back-ups</dt>
+                            <dd>Een systeem waarbij je altijd minimaal drie kopieën van gegevens hebt, bewaard op 
+                                minimaal twee verschillende manieren, waarvan één kopie altijd op een aparte locatie.</dd>
+
+                            <dt>Encryptie</dt>
+                            <dd>Het husselen van een bericht of een bestand met een sleutelen. Zonder de 
+                                sleutel kun je het oorspronkelijke bericht niet terugkrijgen.</dd>
+
+                            <dt>Hashing</dt>
+                            <dd>Het husselen van een bericht, zonder dat je terug kunt naar het origineel. 
+                                Hetzelfde bericht twee keer hashen levert altijd dezelfde hash op.</dd>
+
+                            <dt>DDoS-aanval</dt>
+                            <dd>Een aanval waarbij een bepaalde service (tijdelijk) onbeschikbaar wordt gemaakt.</dd>
                         </dl>
                     </div>
                 </article>
